--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -39,12 +39,12 @@
             <form action="/" method="post">
               <h2 class="flex text-center">LOGIN</h2>
               <!-- Username input -->
-              <label class="form-label" for="membername">Member Name</label>
+              <label class="form-label" for="username">Member Name</label>
               <div data-mdb-input-init class="form-outline mb-4">
                 <input
                   type="text"
-                  id="membername"
-                  name="membername"
+                  id="username"
+                  name="username"
                   class="form-control form-control-lg"
                   placeholder="Enter your username"
                   required
@@ -62,22 +62,6 @@
                   placeholder="Enter password"
                   required
                 />
-              </div>
-
-              <div class="d-flex justify-content-between align-items-center">
-                <!-- Checkbox -->
-                <div class="form-check mb-0">
-                  <input
-                    class="form-check-input me-2"
-                    type="checkbox"
-                    value=""
-                    id="rememberMe"
-                  />
-                  <label class="form-check-label" for="rememberMe">
-                    Remember me
-                  </label>
-                </div>
-                <a href="#!" class="text-body">Forgot password?</a>
               </div>
 
               <div class="text-center text-lg-start mt-4 pt-2">
