--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -11,7 +11,7 @@
     </script>
     
     <footer>
-      <div class="text-center">© 2024 Your Company. All rights reserved.</div>
+      <div class="text-center my-3">© 2024 Your Company. All rights reserved.</div>
       </footer>
     </body>
 </html>
