--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -44,7 +44,7 @@
       }
       .fixed-size-img {
         width: 100%;
-        height: 380px; /* Bạn có thể thay đổi chiều cao này tùy theo nhu cầu */
+        height: 360px; /* Bạn có thể thay đổi chiều cao này tùy theo nhu cầu */
         object-fit: cover; /* Giúp hình ảnh lấp đầy khung mà không bị biến dạng */
       }
   
@@ -52,13 +52,13 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <div class="container">
-        <a href="/watches" class="navbar-brand">
+      <div class="container ">
+        <a href="/watches" class="navbar-brand text-dark">
           <img
-            src="https://s3.hn-1.cloud.cmctelecom.vn/galle-media/upload_images/images/2021/09/01/5-logo-longines.jpg"
-            class="w-25 h-50"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzx1ufrnUwMOku8e-sp7wnrhCXDADDl0coDixTRAEmBkkzd_ffYGVQL4VsCF4xK66RU4c&usqp=CAU"
+            class="w-25 h-50 mx-3"
           />
-          ROLEX</a
+          Watch Store</a
         >
         <button
           class="navbar-toggler"
